3.4/mule-healthcare-toolkit/mule-healthcare-toolkit.adoc
= Mule Healthcare Toolkit

*_Enterprise Edition, CloudHub_*

The *Mule Healthcare Toolkit* is a collection of features that facilitates integration with healthcare systems by providing the tools needed to easily create, read and transform HL7 version v2.x messages within Mule.

[TIP]
This document assumes a working knowledge of Mule ESB and Mule Studio. To find out more about these applications, consult the link:/docs/display/34X/Mule+User+Guide[Mule User Guide].

== Overview

http://www.hl7.org[Health Level Seven International] is a standards development organization that has defined a set of standards for the transport and communication of healthcare information. The Mule Healthcare Toolkit supports HL7 version 2.x. 

The Mule Healthcare toolkit supports, and allows transformation between, the following message types:

* HL7 ER7: A human-readable format based on line segments and pipe delimiters
* HL7 XML: An XML representation of HL7 ER7 messages
* HAPI Message Objects: The native message format of the http://hl7api.sourceforge.net/[HAPI] (HL7 Application Programming Interface) message parser. HAPI is an open source object-oriented parser that works with HL7 XML (version 2.X) and ER7 formats.

The Mule Healthcare toolkit allows you to send and receive HL7 messages over MLLP (using the link:/docs/display/34X/HL7+Endpoint+Reference[HL7 Endpoint]) and other transport protocols (and corresponding endpoints) supported by Mule, such as link:/docs/display/34X/HTTP+Transport+Reference[HTTP].

Other features:

* link:/docs/display/34X/HL7+Message+Validation[HL7 Message Validation], which you can apply at a global connector level or for specific message processors only
* link:/docs/display/34X/HL7+Mule+Expression+Language+Support[HL7 Mule Expression Language Support] allows you to access and modify the contents of an HL7 message using the link:/docs/display/34X/Mule+Expression+Language+MEL[Mule Expression Language MEL]

This page describes the functionality included in the Mulesoft Healthcare toolkit, and provides installation instructions.

== Toolkit Contents

The Mule Healthcare Toolkit includes the following elements.

[cols=",",options="header"]
|===
|Type |Tool |Input |Output |Use
|Connector
|link:/docs/display/34X/HL7+Connector[HL7 Connector]
|N/A
|N/A
|Use to configure a link:/docs/display/34X/Understand+Global+Mule+Elements[global connector] which endpoints in Mule can reference.
|Endpoint
|link:/docs/display/34X/HL7+Endpoint+Reference[HL7 Endpoint Reference]
|N/A
|N/A
|Use to receive or send HL7 messages over MLLP.
.4+|Components |link:/docs/display/34X/HL7+Message+Component[HL7 Message Component]
|N/A
|HL7 ER7
|Use to generate an ER7-encoded HL7 message with user-defined parameters. Please note that this component does not generate the HL7 _payload_ of a message, only the message structure. Use the link:/docs/display/34X/HL7+Append+Segment+Component+Reference[Append Segment Component] to add the payload.
|link:/docs/display/34X/HL7+ACK+Component+Reference[HL7 ACK Component Reference]
|HL7 ER7
|HL7 ER7
|Use to return ACK (general acknowledge) messages to confirm message receipt and validation, and NACK (negative general acknowledge) in case of message errors. +
|link:/docs/display/34X/HL7+Append+Segment+Component+Reference[HL7 Append Segment Component Reference]
|HAPI Message Object
|HAPI Message Object
|Use in conjunction with the link:/docs/display/34X/HL7+Message+Component[HL7 Message Component] to add content to an HL7 message.
|link:/docs/display/34X/HL7+Delete+Segment+Component+Reference[HL7 Delete Segment Component Reference]
|HAPI Message Object
|HAPI Message Object
|Use to delete content from an HL7 message.
|Transformer
|link:/docs/display/34X/HL7+Encoding+Transformer[HL7 Encoding Transformer]
|HAPI Message Object, HL7 XML or HL7 ER7
|HAPI Message Object, HL7 XML or HL7 ER7
|Transforms an HL7 message to and from the ER7, XML and HAPI message object formats.
|Filter
|link:/docs/display/34X/HL7+Profile+Validator+Filter[HL7 Profile Validator Filter]
|N/A
|N/A
|Use to conform a message to http://wiki.hl7.org/index.php?title=Conformance_Profile[message profiles], which define constraints that go beyond the standard HL7 specifications.
|Exception Strategy
|link:/docs/display/34X/HL7+Exception+Strategy[HL7 Exception Strategy]
|N/A
|N/A
|Sets a flow's link:/docs/display/34X/Error+Handling[exception strategy] to HL7, instead of the link:/docs/display/34X/Error+Handling#ErrorHandling-DefaultExceptionStrategy[default], and sends an (N)ACK message to the originating application.
|===

== Installing the Mule Healthcare Toolkit

Contact mailto:info@mulesoft.com[MuleSoft] to obtain the Mule Healthcare Toolkit. Once you have obtained the update site zip file, complete the following steps:

. Create a new empty folder on your local file system.
. Unzip the update site zip file to the folder you created in step one.
. In Studio, open the *Help* menu and select *Install New Software*. Studio displays the *Install* window. +

+
image:/docs/download/attachments/95393736/1.installwindow.png?version=1&modificationDate=1374599026868[image] +
+

. In the **Install **window, click *Add*. Studio displays the **Add Repository **window. +

+
image:/docs/download/attachments/95393736/2.add.repository.png?version=1&modificationDate=1374599027169[image] +
+

. In the *Add Repository* window, click *Local*. Studio displays the *Open* window. +

+
image:/docs/download/thumbnails/95393736/3.open.png?version=1&modificationDate=1374599027458[image] +
+

. In the **Open **window, select the folder you created in step one, which contains the unzipped files from the update site, then click *Open*.
. When Studio returns to the *Add Repository* panel, click *OK*.
. When Studio returns to the *Install* panel, click the checkbox to select *Mule HL7 Transport*, displayed under *Name*. Then, click *Next*. +

+
image:/docs/download/attachments/95393736/4.install.png?version=1&modificationDate=1374599027878[image] +
+

. Click *Next* to confirm the installation details.
. Click  *I accept the terms of the license agreement*, then click *Finish*.
. After installation is finished, the installer asks you to restart Studio. Click *Yes* to restart.

After restarting Studio, type `hl` in the Palette filter to quickly find HL7 building blocks.

== See Also

* Use the link:/docs/display/34X/Testing+with+HAPI+TestPanel[HAPI TestPanel] to test your HL7 application.
* Learn more about link:/docs/display/34X/Transformers[transformers] in Studio.
* Learn more about link:/docs/display/34X/Components[components] in Studio.
* Learn more about link:/docs/display/34X/Filters[filters] in Studio.
* Learn more about link:/docs/display/34X/Studio+Endpoints[endpoints] in Studio.
