3.5/mule-healthcare-toolkit/mule-healthcare-toolkit.adoc
= Mule Healthcare Toolkit

*_Enterpise, CloudHub_*

The *Mule Healthcare Toolkit* is a collection of features that facilitates integration with healthcare systems by providing the tools needed to easily create, read, and transform HL7 version v.2.x messages with Mule.

[TIP]
This document assumes a working knowledge of Mule ESB and Anypoint Studio. To find out more about these applications, consult the [Mule User Guide].

== Overview

[Health Level Seven International] is a standards development organization that has defined that has defined a set of standards for the transport and communication of healthcare information. The Mule Healthcare Toolkit supports HL7 version 2.x.

The Mule Healthcare toolkit supports, and allows transformation between, the following message types:

* HL7 ER7: A human-readable format based on line based on line segments and pipe delimiters.
* HL7 XML: An XML representation of HL7 ER7 messages.
* HAPI Message Objects: The native message format of the [HAPI] (HL7 Application Programming Interface) message parser. HAPI is an open source object-oriented parser that works with HL7 XML (version 2.X) and ER7 formats.

The Mule Healthcare toolkits allow you to send and receive HL7 message over MLLP (using the [HL7 connector]) and other transport protocols (and corresponding connectors) supported by Mule, such as [HTTP].

Other features:

* [HL7 Message Validation], which you can apply at a global connector level or for specific message processor only.

* [HL7 Mule Expression Language Support] allows you to access and modify the contents of an HL7 message using the [Mule Expression Language MEL].

This page describes the functionality included in the MuleSoft Healthcare toolkit, and provides installation instructions.

== Toolkit Contents

The Mule Healthcare Toolkit includes the following elements.

[width="100%",cols=",",options="header"]
|===
|Type |Tool |Input |Output |Use
|Connector |[HL7 Global Connector] |N/A |N/A |Use to configure a [global connector] which connectors in Mule can reference.
|Connector |[HL7 Connector Reference] |N/A |N/A |Use to receive or send HL7 messages over MLLP.
.4+|Components |[HL7 Message Component] |N/A |HL7 ER7 |Use to generate an ER7-encoded HL7 message with user-defined parameters. Please note that this component does not generate the HL7 _payload_ of a message, only the message structure. Use the Append Segment Component to add the payload.
|[HL7 ACK Component Reference] |HL7 ER7 |HL7 ER7 |Use to return ACK (general acknowledge) message to confirm message receipt and validation, and NACK (negative general acknowledge) in case of message errors.
|[HL7 Append Segment Component Reference] |HAPI Message Object |HAPI Message Object |Use in conjunction with the [HL7 Message Component] to add content to an HL7 message.
|[HL7 Delete Segment Component Reference] |HAPI Message Object |HAPI Message Object |Use to delete content from an HL7 message
|Transformer |[HL7 Encoding Transformer] |HAPI Message Object, HL7 XML or HL7 ER7 |HAPI Message Object, HL7 XML or HL7 ER7 |Transform an HL7 message to and from the ER7, XML, and HAPI message object formats.
|Filter |[HL7 Profile Validator Filter] |N/A |N/A |Use to conform a message to [message profiles], which define constraints that go beyond the standard HL7 specifications.
|Exception Strategy |[HL7 Exception Strategy] |N/A |N/A |Sets a flow's [exception strategy] to HL7 instead of the [default], and sends an (N)ACK message to the originating application.
|===

== Installing the Mule Healthcare Toolkit

[NOTE]
*The Healthcare Toolkit is available for free on trial basis*. Contact [MuleSoft Support] to request a license to use the Healthcare Toolkit components in a production environment.

. In Studio, open the *Help* menu, then select *Install New Software*.

. In the *Work With* field of the *Install* wizard, use the drop-down menu to select: `MuleStudio Cloud Connectors Update Site - http://repository.mulesoft.org/connectors/releases/3.5.0 `
+
[TIP]
====
////
collapse

Are you behind a firewall?

If you are on a network with firewall restrictions, you may find that the Studio update sites are blocked and you are unable to download extensions.

Allow the following sites on your firewall to allow Studio to connect to the update sites:

http://studio.mulesoft.org

http://repository.mulesoft.org/connectors/releases/

http://download.eclipse.org/technology/m2e/releases

http://download.eclipse.org/eclipse/updates

http://subclipse.tigris.org

http://findbugs.cs.umd.edu/eclipse/
////
====

. The selection elicits the display of three types of connectors in the *Name-Version* table: Community, Premium, and Standard. Click to expand *Premium*, then check *Mule HL7 Transport*. Click *Next*.
+
image:/docs/download/attachments/122751157/install_toolkit.png?version=1&modificationDate=1421450571631[image]

. Click *Next* to confirm the installation details.

. Click *I accept the terms of the license agreement*, then click *Finish*.

. After installation is finished, the installer asks you to restart Studio. Click *Yes* to restart. After Studio restarts, type `HL7` in the palette filter to quickly find HL7 building blocks (see image below).
+
image:/docs/download/attachments/122751157/hl7_palette.png?version=1&modificationDate=1421450571372[image]

== See Also

* Use the [HAPI TestPanel] to test your HL7 application.
* Learn more about [transformers] in Studio.
* Learn more about [components] in Studio.
* Learn more about [filters] in Studio.
* Learn more about [connectors] in Studio.
